Basic post tracker functionality implemented
